# n_body_dart_ffi

./: .gitignore  README.md  ffigen.yaml  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: constants.dart  controls.dart  extensions.dart  ffi_binder.dart  flutter_ffi_gen.dart  main.dart  models.dart
lib/painters/: c_painter.dart  dart_native_painter.dart  dart_painter.dart  ffi_painter.dart  n_body.dart  rust_painter.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
plugins/ffi_c_plugin/: .metadata  README.md  ffigen.yaml  pubspec.yaml
plugins/ffi_c_plugin/android/: build.gradle  settings.gradle
plugins/ffi_c_plugin/android/src/main/: AndroidManifest.xml
plugins/ffi_c_plugin/example/: README.md  pubspec.yaml
plugins/ffi_c_plugin/example/lib/: main.dart
plugins/ffi_c_plugin/example/linux/: CMakeLists.txt  my_application.cc
plugins/ffi_c_plugin/example/windows/: CMakeLists.txt
plugins/ffi_c_plugin/hook/: build.dart
plugins/ffi_c_plugin/ios/: ffi_c_plugin.podspec
plugins/ffi_c_plugin/ios/Classes/: ffi_c_plugin.cpp
plugins/ffi_c_plugin/lib/: ffi_c_plugin.dart  ffi_c_plugin_bindings_generated.dart
plugins/ffi_c_plugin/linux/: CMakeLists.txt
plugins/ffi_c_plugin/macos/: ffi_c_plugin.podspec
plugins/ffi_c_plugin/src/: CMakeLists.txt  ffi_c_plugin.cpp  ffi_c_plugin.h  ffi_mac_ios_include.cpp  simulation.cpp  simulation.h
plugins/ffi_c_plugin/windows/: CMakeLists.txt
plugins/ffi_rust_plugin/: README.md  ffigen.yaml  pubspec.yaml
plugins/ffi_rust_plugin/android/: build.gradle  settings.gradle
plugins/ffi_rust_plugin/example/: README.md  pubspec.yaml
plugins/ffi_rust_plugin/example/lib/: main.dart
plugins/ffi_rust_plugin/example/linux/: CMakeLists.txt  my_application.cc
plugins/ffi_rust_plugin/example/windows/: CMakeLists.txt
plugins/ffi_rust_plugin/hook/: build.dart
plugins/ffi_rust_plugin/ios/: ffi_rust_plugin.podspec
plugins/ffi_rust_plugin/lib/: ffi_rust_plugin.dart  ffi_rust_plugin_bindings_generated.dart
plugins/ffi_rust_plugin/linux/: CMakeLists.txt
plugins/ffi_rust_plugin/macos/: ffi_rust_plugin.podspec
plugins/ffi_rust_plugin/macos/Classes/: ffi_rust_plugin.c
plugins/ffi_rust_plugin/src/: CMakeLists.txt  ffi_rust_plugin.cpp  ffi_rust_plugin.h
plugins/ffi_rust_plugin/src/rust/: Cargo.toml  ffi_gen.h
plugins/ffi_rust_plugin/src/rust/src/: lib.rs
plugins/ffi_rust_plugin/windows/: CMakeLists.txt
src/c_lib/: lib.cpp  lib.h  simulation.cpp  simulation.h
src/n_body_simulation/: Cargo.toml  ffi_gen.h
src/n_body_simulation/src/: capi.rs  lib.rs  main.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+25 files in other folders)
